# auto-researchtrading

./: .dockerignore  .gitignore  AGENTS.md  AUTO_RESEARCH_TUI_SPEC.md  AUTO_RESEARCH_UI_REDESIGN_SPEC.md  CODEBASE_KNOWLEDGE_GRAPH.json  CODEBASE_KNOWLEDGE_GRAPH.md  Dockerfile  POST.md  STRATEGIES.md  TWITTER_THREAD.md  autoresearch_daemon.py  autotrader_tui.py  backtest.py  backtest_5m.py  dashboard_template.html  equity_curve.csv  experiment_manager.py  export_equity.py  external_wallet_bridge.py  fly.toml  fly_entrypoint.py  generate_charts.py  jupiter_execution.py  jupiter_live_adapter.py  paper_engine.py  paper_state.py  paper_trade.py  paper_watchdog.py  pyproject.toml  run_jupiter_live.py  strategy.py  strategy_probe.py  workbench_auth.py  workbench_ctl.py
artifacts/: design-shotgun-mission-control.html  grid_search_base_position_pct.json  grid_search_bb_compression_pctile.json  grid_search_bb_compression_pctile_fine.json  grid_search_compression_atr.json  grid_search_compression_min_votes.json  out_of_sample_test.json
benchmarks/: avellaneda_mm.py  momentum_breakout.py
docs/: agent-harness.md  auto-research-dual-ui-campaign.md  backtest-5m.md  experiment-manager.md  fly-runtime-manifest.json  integration-status-2026-04-01.md  jupiter-execution.md  jupiter-perps-mcp-governance-spec.md  jupiter_experiment_threads.json  kade-gstack-integration.md  obsidian-2026-04-05-integration-execution-checklists.md  ralph-dual-ui-execution.md  research-grade-audit.md  sol-baseline-strategy-v1.md  trade_postmortems.md
kade/: KADE.md
tests/: test_fly_auth.py  (+3 more)
(+36 files in other folders)
